--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
 }
 
 .calculator {
+  position: absolute;
+  top: 4%;
+  left: 35%;
+  transform: translate(-30%, 50%);
+  transition: 0.5s;
   display: flex;
   flex-direction: column;
   width: 380px;
@@ -19,9 +24,33 @@ body {
   padding: 1rem;
   margin: 1.5rem;
   background-color: #f9d7d1;
-  border-radius: 16px;
-  box-shadow: 15px 8px 0 11px #edbcb6, -2px -2px #edbcb6;
-  border: 2px solid #f2b1b1;
+  transform: skewY(-6deg);
+  box-shadow: -10px 5px 30px rgba(0, 0, 0, 0.5);
+  border: 1px solid #f2b1b1;
+}
+
+.calculator:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -25px;
+  width: 25px;
+  height: 100%;
+  background-color: #ecb1a8;
+  transform-origin: right bottom;
+  transform: skewY(45deg);
+}
+
+.calculator:after {
+  content: "";
+  position: absolute;
+  top: -25px;
+  left: 0;
+  width: 100%;
+  height: 25px;
+  background-color: #f1c0b9;
+  transform-origin: bottom left;
+  transform: skewX(45deg);
 }
 
 .display {
@@ -55,7 +84,7 @@ button {
   height: 65px;
   border-radius: 15px;
   background-color: #f8edeb;
-  box-shadow: 4px 4px #f7c6bc;
+  box-shadow: -4px -4px #f7c6bc;
   text-align: center;
   cursor: pointer;
 }
@@ -72,5 +101,5 @@ button:hover {
 .clear,
 .equals {
   background-color: #f4b7ad;
-  box-shadow: 4px 4px #e3a096;
+  box-shadow: -4px -4px #e3a096;
 }
